--- a/part1.tex
+++ b/part1.tex
@@ -174,3 +174,41 @@ SDN павінна дазваляць спрасціць сеткавы мене
 
 Можна зрабіць вынік, што платформа кантроля небходна для поспеху SDN. Адна з галоўных
 задача --- магчымасць узаемадзеяння праграмных і апаратных элементаў розных вытворцаў.
+
+% ARTICLE_2
+\subsection{Падыходы да рэалізацыі канцэпцыі SDN}
+
+Для рэалізацыі канцэпцыі SDN існуе два асноўных падыходы:
+\begin{enumerate}
+    \item класічная мадэль;
+    \item гібрыдная мадэль.
+\end{enumerate}
+
+Класічная мадэль гістарычна з'явілася першай і прадугледжвае наяўнасць трох складнікаў: кантролера, камутатара і спецыяльнага пратакола, з дапамогай якога кантролер ўзаемадзейнічае з комутатарам --- OpenFlow.
+У тэрмінах дадзенай, класічнай, мадэлі, кантролер і камутатар
+называюцца openflow-кантролерам і openflow-камутатарам.
+Калі на адзін з інтэрфейсаў openflow-камутатара прыходзіць пакет, openflow-
+камутатар аналізуе табліцу перасылкі ў пошуках маршруту для адпраўкі пакета.
+Калі адпаведнага запiсу ў табліцы перасылкі няма, то пакет адпраўляецца, пры дапамозе пратакола OpenFlow на openflow-кантролер, які прымае рашэнні аб
+яго апрацоўцы, у выніку на openflow-кантролеры фарміруецца новы запіс у табліцы перасылкі, якая, з дапамогай таго ж пратакола OpenFlow адпраўляецца на
+openflow-камутатар (для гэтага выкарыстоўваюцца службовыя паведамлення cotroller-to-
+switch). У выніку openflow-камутатар адпраўляе пакет, у адпаведнасці з атрыманым ім ад openflow-камутатара, запісам.
+
+Нягледзячы на прастату, дадзены падыход стварае рад праблем, рашэнне для каторых
+пакуль так і не знайшлося:
+\begin{enumerate}
+    \item не зразумела, якім чынам будзе адбывацца перадача кіруючага трафіка па
+    не настроенай сетцы, гэта значыць да пабудовы табліц перасылкі на openflow-камутатар. Магчымыя шляхі рашэння:
+    \begin{enumerate}
+        \item першапачатковая перадача ўсяго трафіка як шырокавяшчальнага;
+        \item ручная настройка;
+        \item выкарыстоўванне асобных падключэнняў ад openflow-кантролера да openflow-камутатараў;
+    \end{enumerate}
+    \item пратакол маршрутызацыі класа link-state (які найчасцей выкарыстоўваецца у вялікіх сетках правайдараў), які працуе выключна ў рамках openflow-кантролера, не можа
+    аднавіць поўную тапалогію сеткі і сфармаваць карэктную LSDB у тым выпадку,
+    калі стека выкарыстоўвае злучэнні тыпа NBMA. Магчымыя шляхі рашэння:
+        \begin{enumerate}
+            \item выкарыстоўванне пратаколаў тыпа distance-vector (напрыклад, RIP);
+            \item выкарыстоўванне пратакола EIGRP.
+        \end{enumerate}
+    \end{enumerate}
