--- a/part1.tex
+++ b/part1.tex
@@ -211,4 +211,31 @@ switch). У выніку openflow-камутатар адпраўляе паке
             \item выкарыстоўванне пратаколаў тыпа distance-vector (напрыклад, RIP);
             \item выкарыстоўванне пратакола EIGRP.
         \end{enumerate}
-    \end{enumerate}
+\end{enumerate}
+
+Другі падыход да рэалізацыі канцэпцыі SDN ---
+гібрыдная мадэль.
+Дадзены падыход прадугледжвае менш жорсткае ўзаемадзеянне паміж
+кантролерам, з аднаго боку, і камутатарамі, з другога.
+У гэтай мадэлі на ўзровень кантролера вынесены толькі некаторыя элементы кіравання сеткай, напрыклад, складаныя
+алгарытмы ўліку нагрузкі або механізмы хуткага разгортвання MPLS-TE тунэляў.
+
+Канкрэтная рэалізацыя дадзенай мадэлі адрозніваецца ў розных вытворцаў рашэнняў у вобласці тэлекамунікацый. Для рэалізацыі можа быць выкарыстаны як пратакол OpenFlow,
+так і любы іншы механізм узаемадзеяння паміж кантролерам і камутатарамі.
+У адрозненне ад класічнай, гібрыдная мадэль, па сутнасці, апісвае эвалюцыю, а не рэвалюцыю падыходаў да пабудовы і кіравання сеткамі, паколькі аператар сувязі можа
+працягваць эксплуатаваць тое, што ўжо пабудавана, без неабходнасці перабудоўваць
+сетку «з нуля», што прадухіляе з'яўленне непазбежных праблем эксплуатацыі.
+
+Такім чынам, захоўваюцца інвестыцыі ў сетку. Таксама несумнеўнай перавагай гібрыднай
+мадэлі з'яўляецца аб'яднанне пераваг цэнтралізаванай мадэлі SDN (аптымізацыя
+сеткі) і класічнай размеркаванай мадэлі (аднаўленне пасля збояў).
+Развіццё гібрыднай мадэлі апісвае міжнародны праект Open Day Light, прызваны паскорыць адаптацыю, садзейнічаць укараненню інавацый, знізіць рызыкі і стварыць больш празрысты падыход да стварэння праграмна-арыентаваных сетак.
+Праект падтрымліваецца вядучымі вытворцамі ў індустрыі: Cisco, Juniper Networks, Bro-
+cade, VMware і іншымі.
+
+Асноўнай складанасцю пры рэалізацыі гібрыднай мадэлі SDN з'яўляецца інтэграцыя механіхзмаў праграмнага кіравання сеткай з існуючымі тэхналогіямі IP-сетак.
+
+Нягледзячы на паказаную складанасць у рэалізацыі гібрыднай мадэлі SDN, ўкараненне
+гэтай канцэпцыі дае магчымасць пашырыць функцыянальныя магчымасці сеткі за кошт
+стварэння яшчэ аднаго архітэктурнага ўзроўню плоскасці кіравання, на якім
+сканцэнтраваны інтэлектуальныя алгарытмы вынясення рашэнняў і стварэння канфігурацыі сеткі.
