--- a/part1.tex
+++ b/part1.tex
@@ -184,6 +184,7 @@ SDN павінна дазваляць спрасціць сеткавы мене
     \item гібрыдная мадэль.
 \end{enumerate}
 
+\subsubsection{Класічная мадэль.}
 Класічная мадэль гістарычна з'явілася першай і прадугледжвае наяўнасць трох складнікаў: кантролера, камутатара і спецыяльнага пратакола, з дапамогай якога кантролер ўзаемадзейнічае з комутатарам --- OpenFlow.
 У тэрмінах дадзенай, класічнай, мадэлі, кантролер і камутатар
 называюцца openflow-кантролерам і openflow-камутатарам.
@@ -213,6 +214,8 @@ switch). У выніку openflow-камутатар адпраўляе паке
         \end{enumerate}
 \end{enumerate}
 
+
+\subsubsection{Гібрыдная мадэль.}
 Другі падыход да рэалізацыі канцэпцыі SDN ---
 гібрыдная мадэль.
 Дадзены падыход прадугледжвае менш жорсткае ўзаемадзеянне паміж
