--- a/part2.tex
+++ b/part2.tex
@@ -1,5 +1,5 @@
 % Метод управления трафиком в гибридной программно-определяемой сети
-\section{Элементы праграмнага мадэліраванне размеркавання патокаў}
+\section{Праграмнаe мадэліраваннe размеркавання патокаў у сетках SDN}
 
 На аснове вышэй апісаных вывадаў разгледзем гібрыдную мадэль SDN
 на аснове пратакола маршрутызацыі EIGRP.
