--- a/part2.tex
+++ b/part2.tex
@@ -161,9 +161,74 @@ Python абумоўлены яго шматплатформеннасцю, а т
 \end{enumerate}
 
 На малюнку \ref{uml: Class Diagram} прадстаўлена дыяграма класаў.
+
+\clearpage
+
 \begin{figure}[ht!]
     \centering
     \includegraphics[width=\textwidth]{class_diagram.png}
     \caption{Дыяграма класаў праграмы пераліку нагрузкі}
     \label{uml: Class Diagram}
 \end{figure}
+
+\subsubsection{Апісанне класса Interface.}
+
+Дадзены клас змяшчае ўсю неабходную інфармацыю пра інтэрфейс маршрутызатара і
+рэалізуе метады для работы з ім.
+
+Атрыбуты класа:
+\begin{enumerate}
+    \item name --- імя інтэрфейса на маршрутызатары (напрыклад, GigabitEthernet1);
+    \item txload --- значэнне нагрузкі перадачы на інтэрфейсе.
+\end{enumerate}
+
+Метады класа:
+\begin{enumerate}
+    \item get\_name() --- вяртае імя інтэрфейса;
+    \item get\_txload() --- вяртае значэнне нагрузкі перадачы на інтэрфейсе;
+    \item set\_txload(txload) --- выстаўляе значэнне нагрузкі перадачы на інтэрфейсе
+    роўным txload.
+\end{enumerate}
+
+\subsubsection{Апісанне класа Router.}
+
+Дадзены клас змяшчае ўсю неабходную інфармацыю пра маршрутызатар і рэалізуе
+метады для работы з ім.
+
+Атрыбуты класа:
+\begin{enumerate}
+    \item host --- ip адрас маршрутызатара, на які будзе ажыццяўляцца падключэнне кантролерам;
+    \item username --- імя карыстальніка для аўтэнтыфікацыі і аўтарызацыі;
+    \item password --- паролькі карыстальніка для аўтэнтыфікацыі і аўтарызацыі;
+    \item interfaces --- спіс усіх інтэрфейсаў на маршрутызатары.
+\end{enumerate}
+
+Метады класа:
+\begin{enumerate}
+    \item get\_host() --- вяртае ip адрас маршрутызатара;
+    \item \_set\_interfaces() --- устанаўлівает інфармацыю пра інтэрфейсы на маршрутызатары;
+    \item get\_interfaces() --- вяртае ўсе інтэрфейсы маршрутызатара;
+    \item get\_interface\_names() --- вяртае ўсе назвы інтэрфейсаў;
+    \item get\_interface\_txload(interface) --- вяртае нагрузку перадачы інтэрфейса;
+    \item restart\_eigrp() --- перазагружае eigrp пратакол для пералічэння сеткавай тапалогіі;
+    \item \_disable\_eigrp() --- адключае eigrp пратакол;
+    \item \_enable\_eigrp() --- уключае eigrp пратакол.
+\end{enumerate}
+
+\subsubsection{Апісанне класа Recalculation.}
+
+Дадзены клас адказвае за работу праграмы па адсочванні і пералічэнні нагрузкі на
+маршрутызатары.
+
+Атрыбуты класа:
+\begin{enumerate}
+    \item TIMEOUT --- прамежак часу (у секундах) праз які запрашваецца значэнне нагрузкі з інтэрфейсаў маршрутызатара;
+    \item coefficient --- значэнне каэфіцыента $\alpha$;
+    \item threshold --- парог рознасці паміж новай і старой нагрузкай, пры
+    перавышэнні якога адпраўляецца каманда на перабудову сеткавай тапалогіі.
+\end{enumerate}
+
+Метад класа:
+\begin{enumerate}
+    \item recalculation(routers) --- выконвае маніторынг і пералік нагрузкі для маршрутызатараў, інфармацыя пра якіх была перададзена ў метад.
+\end{enumerate}
