--- a/literature.tex
+++ b/literature.tex
@@ -1,6 +1,9 @@
-1. Алейников А. А., Билятдинов К. З., Красов А. В., Левин М. В. Контроль, измерение и ин-
+\sectionWithoutNumber{Спіс скарыстаных крыніц}
+
+\begin{enumerate}[{label=\arabic{*}}]
+    \item Алейников А. А., Билятдинов К. З., Красов А. В., Левин М. В. Контроль, измерение и ин-
 теллектуальное управление трафиком. СПб. : Астерион", 2016.
-2. Vladyko A., Letenko I., Lezhepekov A., Buinevich M. Fuzzy Model of Dynamic Traffic Man-
+    \item Vladyko A., Letenko I., Lezhepekov A., Buinevich M. Fuzzy Model of Dynamic Traffic Man-
 agement in Software-Defined Mobile Networks // Lecture Notes in Computer Science. 2016. Vol. 9870.
 pp. 561–570.
 Нечеткая
@@ -8,12 +11,13 @@ pp. 561–570.
 динамического
 управления
 трафиком
-3. Летенко И. Д.
+    \item Летенко И. Д.
 в программируемых сетях // Системы управления и информационные технологии. 2015.
 Т. 62. No 4.1. С. 179–184.
-4. Красов А. В., Левин М. В., Цветков А. Ю. Управления сетями передачи данных с изме-
+    \item Красов А. В., Левин М. В., Цветков А. Ю. Управления сетями передачи данных с изме-
 няющейся нагрузкой // Всероссийская научная конференция по проблемам управления в техни-
 ческих системах. Санкт-Петербург, 2015. С. 141–146.
-5. Красов А. В., Левин М. В. Возможности управления трафиком в рамках концепции
+    \item Красов А. В., Левин М. В. Возможности управления трафиком в рамках концепции
 SDN // IV Международная научно-техническая и научно-методическая конференция «Актуаль-
 ные проблемы ин
+\end{enumerate}
