Update code; add block schema of algorithm

--- a/preface.tex
+++ b/preface.tex
@@ -10,12 +10,9 @@
 так як кожны сеткавы элемент павінен мець усё большую вылічальную здольнасць, каб
 апрацоўваць не толькі перадачу трафіка, аднак і будаваць тапалогію сеткі ў рэальным часе.
 
-У працах [1, 2, 3, 4, 5] прапанаваны рашэнні па забеспячэнню механізма
-маршрутызацыі ў SDN з улікам выканання патрабаванняў да якасці абслугоўвання
-(QoS) для максімальна магчымай колькасці патокаў і ва ўмовах зменлівай нагрузкі.
-На аснове высноваў, атрыманых у [4] і [5], будзе разгледжана гібрыдная мадэль
+У дадзенай рабоце будзе разгледжана гібрыдная мадэль
 SDN на аснове пратакола маршрутызацыі EIGRP.
-Дадзены пратакол можа выкарыстоўваць 5 крытэрыяў для вызначэнян метрыкі маршрута.
+Дадзены пратакол можа выкарыстоўваць 5 крытэрыяў для вызначэння метрыкі маршрута.
 Па ўмаўчанні выкарыстоўваюцца толькі прапускная здольнасць канала і затрымка перадачы,
 што не дазваляе нагрузкі канала ўплываць на пабудову тапалогіі сеткі.
 Дадзенае абмежаванне было ўведзеная з прычыны таго, што паказальнік нагрузкі інтэрфейса
@@ -27,7 +24,7 @@ SDN на аснове пратакола маршрутызацыі EIGRP.
 папярэдняга значэння.
 
 Гэта дазволіць паменшыць нагрузку на працэсар маршрутызатара і паменшыць частату змянення
-тапалогіі, пры гэтым дазволіўшы сетцы адаптаваць тапалогіі сеткі адносна сеткавых параметраў
+тапалогіі, пры гэтым дазволіўшы маршрутызатару адаптаваць тапалогію сеткі адносна сеткавых параметраў
 у рэальным часе.
 
 \clearpage
