Add the second image

--- a/part1.tex
+++ b/part1.tex
@@ -85,7 +85,8 @@ cеткавую архітэктуру, у якой стан руху трафі
 У кожнага ўзроўня ёсць свае спецыфічныя функцыі.
 \begin{figure}[ht!]
     \centering
-    \includegraphics[width=0.5\textwidth]{layers.png}
+    \includegraphics[width=0.7\textwidth]{layers.pdf}
+    \vspace{-\baselineskip}
     \caption{Структура SDN сетак у выглядзе ўзроўняў}
     \label{img: Layers}
 \end{figure}
@@ -99,11 +100,11 @@ cеткавую архітэктуру, у якой стан руху трафі
 можа лічыцца "мазгамі сеткі", Уся логіка кіравання знаходзіцца ў праграмах і кантролерах,
 якія фарміруюць узровень кіравання.
 
-Узровень менеджмента (Management Plane): гэты ўзровень прадастаўляе сабой
+Узровень менеджменту (Management Plane): гэты ўзровень прадастаўляе сабой
 набор праграм, якія выконваюць функцыі Northbound Interface для забеспячэння
 кіравання сеткай. Такія праграмы ўключаюць у сябе маршрутызацыію, фаерволы,
 размеркавальнікі нагрузкі, маніторынг і гэтак далей.
-Праграмы менеджмента вызначаюць палітыкі, якія ў канцы канцоў інтэрпрэтыруюцца
+Праграмы менеджменту вызначаюць палітыкі, якія ў канцы канцоў інтэрпрэтыруюцца
 як інструкцыі для Southbound Interface.
 
 Разгледзім складкіні ўзроўня кіравання.
