--- a/part1.tex
+++ b/part1.tex
@@ -246,7 +246,7 @@ switch). У выніку openflow-камутатар адпраўляе паке
 Праект падтрымліваецца вядучымі вытворцамі ў індустрыі: Cisco, Juniper Networks, Bro-
 cade, VMware і іншымі.
 
-Асноўнай складанасцю пры рэалізацыі гібрыднай мадэлі SDN з'яўляецца інтэграцыя механіхзмаў праграмнага кіравання сеткай з існуючымі тэхналогіямі IP-сетак.
+Асноўнай складанасцю пры рэалізацыі гібрыднай мадэлі SDN з'яўляецца інтэграцыя механізмаў праграмнага кіравання сеткай з існуючымі тэхналогіямі IP-сетак.
 
 Нягледзячы на паказаную складанасць у рэалізацыі гібрыднай мадэлі SDN, ўкараненне
 гэтай канцэпцыі дае магчымасць пашырыць функцыянальныя магчымасці сеткі за кошт
