--- a/part2.tex
+++ b/part2.tex
@@ -2,23 +2,71 @@
 \section{Праграмнаe мадэліраваннe размеркавання патокаў у сетках SDN}
 
 На аснове вышэй апісаных вывадаў разгледзем гібрыдную мадэль SDN
-на аснове пратакола маршрутызацыі EIGRP.
+пабудаваную ў сетцы з пратаколам маршрутызацыі EIGRP.
 
-Дадзены пратакол адносіцца да тыпу distance-vector, аднак, у адрозненне ад
-RIP, ён выкарыстоўвае ў якасці асновы сваёй работы алгарытм дыфузійных вылічэнняў.
+\subsection{Прынцып работы пратакола EIGRP}
 
-Маршрутызатары, якія ўдзельнічаюць у працы EIGRP абменьваюцца інфармацыяй аб прэфіксах, якія знаходзяцца ў табліцы маршрутызацыі кожнага з іх.
+EIGRP (англ. Enhanced Interior Gateway Routing Protocol) --- пратакол маршрутызацыі, распрацаваны фірмай Cisco на аснове пратаколу IGRP той жа фірмы. Рэліз пратаколу адбыўся ў 1994 годзе. EIGRP выкарыстоўвае механізм DUAL (diffusing update algorithm) для выбару найбольш кароткага маршруту.
 
-Інфармацыя аб прэфіксах змяшчае:
+EIGRP больш просты ў рэалізацыі і меней патрабавальны да вылічальных рэсурсаў маршрутызатара чым пратакол OSPF (Open Shortest Path First). Таксама EIGRP мае больш удасканалены алгарытм вылічэння метрыкі (DUAL), які можа выкарыстоўваць 5 розных кампанентаў для разліку:
+
 \begin{enumerate}
-    \item IP-адрас сеткі;
-    \item маску падсеткі;
-    \item паласу прапускання сегмента гэтай сеткі;
-    \item затрымку на інтэрфейсе маршрутызатара, які ўяўляе дадзены сегмент сеткі;
-    \item нагрузку, якая дзейнічае на інтэрфейсе, які ўяўляе дадзены сегмент сеткі;
-    \item надзейнасць, разлічаная на інтэрфейсе дадзенага сегмента сеткі;
-    \item памер MTU.
+    \item прапускная здольнасць (Bandwidth) --- мінімальная прапускная здольнасць для дадзенага маршруту (а не сума коштаў (cost) у адрозненне ад OSPF).
+    \item Затрымка (Delay) --- cумарная затрымка на ўсім шляху маршруту.
+    \item Надзейнасць (Reliability) --- найгоршы паказчык надзейнасці на ўсім шляху маршруту, заснаваны на характарыстыкі keep alive.
+    \item Нагрузка (Loading) --- найгоршы паказальнік нагрузкі інтэрфейса на ўсім шляху маршруту, заснаваны на колькасці трафіку, які праходзіць праз інтэрфейс і параметры bandwidth на гэтым інтэрфейсе.
+    \item MTU (Maximum transmission unit) --- мінімальны памер MTU на ўсім шляху маршруту.
 \end{enumerate}
+
+Па ўмаўчанні, EIGRP выкарыстоўвае толькі першыя два кампаненты, так як надзейнасць і нагрузка --- дынамічныя велічыні, якія могуць змяняцца да некалькіх раз у секунду. Адпаведна, кожнае змяненне выклікае пераразлік метрыкі для маршрутаў і выкарыстанне працэсарнай магутнасці маршрутызатара да 100\%. MTU не з'яўляецца дынамічнай велічынёй, але не выкарыстоўваецца па прычыне слабога ўплыву на метрыку маршруту.
+
+Асноўныя характарыстыкі EIGRP:
+\begin{enumerate}
+     \item хуткая збежнасць (у параўнанні з іншымі дыстанцыйна-вектарнымі пратаколамі);
+     \item падтрымка VLSM (Variable Length Subnet Masking);
+     \item частковыя абнаўлення паміж суседзямі;
+     \item падтрымка розных пратаколаў сеткавага ўзроўня (IP, IPX, AppleTalk);
+     \item аднолькавыя настройкі пратакола пры выкарыстанні розных пратаколаў канального ўзроўню (напрыклад, у OSPF настройкі адрозніваюцца для Ethernet і Frame Relay);
+     \item складаная метрыка;
+     \item выкарыстанне multicast (224.0.0.10) і unicast адрасоў, замест шырокавяшчальнай рассылкі;
+\end{enumerate}
+
+\subsubsection{RTP і тыпы паведамленняў EIGRP}
+
+RTP (Reliable Transport Protocol) кіруе працэсам адпраўкі і атрымання пакетаў EIGRP.
+
+RTP забяспечвае:
+\begin{enumerate}
+    \item гарантаваную дастаўку пакетаў. Для гэтага выкарыстоўваецца прапрыетарны алгарытм Cisco, reliable multicast. Пакеты адпраўляюцца на multicast-адрас 224.0.0.10. Кожны сусед які атрымаў такі пакет адпраўляе пацверджанне адпраўніку пакета.
+    \item захаванне парадку пакетаў. У кожным пакеце выкарыстоўваецца два нумары паслядоўнасці (sequence). Кожны пакет уключае ў сябе нумар прысвоены яму адпраўніком. Гэты нумар павялічваецца на адзінку кожны раз, калі маршрутызатар адпраўляе новы пакет. Акрамя таго, адпраўнік змяшчае ў пакет нумар апошняга атрыманага пакета ад атрымальніка.
+    \item у некаторых выпадках RTP выкарыстоўвае негарантаваную дастаўку. У такіх пакетах нe прастаўляюцца нумары паслядоўнасці і яны не патрабуюць пацвярджэння аб атрыманнi.
+\end{enumerate}
+
+Усе паведамленні EIGRP інкапсулюецца ў IP-пакеты, нумар EIGRP ў полі пратакол IP-пакета --- 88.
+
+EIGRP выкарыстоўвае 5 тыпаў паведамленняў:
+\begin{enumerate}
+    \item Hello --- маршрутызатары выкарыстоўваюць hello-пакеты для выяўлення суседзяў. Пакеты адпраўляюцца пры дапамозе multicast рассылкі і не патрабуюць пацвярджэння аб атрыманнi;
+    \item Update --- змяшчаецца інфармацыя аб змене маршрутаў. Яны адпраўляюцца толькі маршрутызатарам, якіх тычыцца абнаўленне. Гэтыя пакеты могуць быць адпраўленыя канкрэтнаму маршрутызатару (unicast рассылка) або групе маршрутызатараў (multicast рассылка). Атрыманне update-пакета пацвярджаецца адпраўкай ACK пакета;
+    \item Query --- калі маршрутызатар выконвае падлік маршруту і ў яго няма feasible successor, ён адпраўляе query-пакет сваім суседзям для таго каб вызначыць ці няма feasible successor для гэтага маршруту ў іх. Звычайна query-пакеты адпраўляюцца multicast рассылкай, але могуць быць і unicast рассылкай. Атрыманне query-пакета пацвярджаецца адпраўкай ACK атрымальнікам пакета;
+    \item Reply --- маршрутызатар адпраўляе reply-пакет у адказ на query-пакет. Reply-пакеты адпраўляюцца unicast рассылкай таму, хто адправіў query-пакет. Атрыманне reply-пакета пацвярджаецца адпраўкай ACK;
+    \item ACK --- пакет, які пацвярджае атрыманне пакетаў update, query, reply. ACK-пакеты адпраўляюцца unicast рассылкай і ўтрымліваюць у сабе acknowledgment number. Фактычна гэта hello-пакеты, якія не перадаюць даных. Выкарыстоўваецца негарантаваная дастаўка.
+\end{enumerate}
+%Дадзены пратакол адносіцца да тыпу distance-vector, аднак, у адрозненне ад
+%RIP, ён выкарыстоўвае ў якасці асновы сваёй работы алгарытм дыфузійных вылічэнняў.
+%
+%Маршрутызатары, якія ўдзельнічаюць у працы EIGRP абменьваюцца інфармацыяй аб прэфіксах, якія знаходзяцца ў табліцы маршрутызацыі кожнага з іх.
+%
+%Інфармацыя аб прэфіксах змяшчае:
+%\begin{enumerate}
+%    \item IP-адрас сеткі;
+%    \item маску падсеткі;
+%    \item паласу прапускання сегмента гэтай сеткі;
+%    \item затрымку на інтэрфейсе маршрутызатара, які ўяўляе дадзены сегмент сеткі;
+%    \item нагрузку, якая дзейнічае на інтэрфейсе, які ўяўляе дадзены сегмент сеткі;
+%    \item надзейнасць, разлічаная на інтэрфейсе дадзенага сегмента сеткі;
+%    \item памер MTU.
+%\end{enumerate}
 
 У якасці паласы прапускання сегмента сеткі перадаецца мінімальная
 паласа прапускання па сеткаваму шляху, праз які праходзіць маршрут да зададзенай сеткі. У якасці затрымкі перадаецца сумарнаe значэнне затрымкі
