--- a/part2.tex
+++ b/part2.tex
@@ -52,6 +52,32 @@ EIGRP выкарыстоўвае 5 тыпаў паведамленняў:
     \item Reply --- маршрутызатар адпраўляе reply-пакет у адказ на query-пакет. Reply-пакеты адпраўляюцца unicast рассылкай таму, хто адправіў query-пакет. Атрыманне reply-пакета пацвярджаецца адпраўкай ACK;
     \item ACK --- пакет, які пацвярджае атрыманне пакетаў update, query, reply. ACK-пакеты адпраўляюцца unicast рассылкай і ўтрымліваюць у сабе acknowledgment number. Фактычна гэта hello-пакеты, якія не перадаюць даных. Выкарыстоўваецца негарантаваная дастаўка.
 \end{enumerate}
+
+\subsubsection{Адносіны суседства і пакеты Hello}
+
+Для ўстанаўлення адносін суседства EIGRP выкарыстоўвае пакеты hello:
+\begin{enumerate}
+    \item на ethernet-інтэрфейсах і point-to-point інтэрфейсах hello-пакеты па ўмаўчанні адпраўляюцца кожныя 5 секунд, але з невялікім выпадковым адхіленнем, якое выкарыстоўваецца для таго, каб паміж маршрутызатарамі не было сінхранізацыі ў адпраўцы hello-пакетаў;
+    \item на multipoint X.25, Frame Relay, і ATM інтэрфейсах hello-пакеты адпраўляюцца unicast па змаўчанні кожныя 60 секунд;
+    \item калі сусед не дасылае hello-паведамленне за перыяд hold time (па ўмаўчанні 15 секунд, 3 hello-інтэрвалы), то ён лічыцца недаступным.
+\end{enumerate}
+
+Для таго каб маршрутызатары сталі суседзямі павінны выконвацца такія ўмовы:
+\begin{enumerate}
+    \item маршрутызатары павінны прайсці аўтэнтыфікацыю;
+    \item маршрутызатары павінны быць у адной AS (Autonomous System);
+    \item адносіны суседства павінны ўстанаўлівацца на галоўных адрасах (калі прыходзіць hello-пакет, маршрутызатар правярае ці належыць адрас адпраўніка сетцы на галоўным адрасе інтэрфейса);
+    \item павінны супадаць значэння K-каэфіцыентаў.
+\end{enumerate}
+
+Для таго каб маршрутызатары сталі EIGRP-суседзямі ў іх не абавязаны супадаць Hello і Hold time.
+Маршрутызатар выкарыстоўвае значэння таймераў атрыманыя ад суседа.
+Калі на адным з маршрутызатараў зменены Hello або Hold time, то суседзі гэтага маршрутызатара будуць выкарыстоўваць гэтыя значэння. Для таго каб сам маршрутызатар выкарыстоўваў іншыя значэнні, неабходна змяніць таймер на адпаведным інтэрфейсе суседа.
+
+Інфармацыя аб усіх выяўленых суседзях змяшчаецца ў табліцы суседзяў.
+Табліца суседзяў (neighbor table) --- спіс непасрэдна далучаных маршрутызатараў (на якіх працуе EIGRP) з якімі маршрутызатар устанавіў адносіны суседства. Адна табліца суседзяў існуе для кожнага PDM (Protocol-dependent module).
+
+EIGRP можа анансаваць сеткі дадатковых адрасоў, але hello-пакеты адпраўляюцца з галоўнага адраса.
 %Дадзены пратакол адносіцца да тыпу distance-vector, аднак, у адрозненне ад
 %RIP, ён выкарыстоўвае ў якасці асновы сваёй работы алгарытм дыфузійных вылічэнняў.
 %
