--- a/part2.tex
+++ b/part2.tex
@@ -31,7 +31,7 @@ EIGRP больш просты ў рэалізацыі і меней патраб
      \item выкарыстанне multicast (224.0.0.10) і unicast адрасоў, замест шырокавяшчальнай рассылкі;
 \end{enumerate}
 
-\subsubsection{RTP і тыпы паведамленняў EIGRP}
+\subsubsection{RTP і тыпы паведамленняў EIGRP.}
 
 RTP (Reliable Transport Protocol) кіруе працэсам адпраўкі і атрымання пакетаў EIGRP.
 
@@ -53,7 +53,7 @@ EIGRP выкарыстоўвае 5 тыпаў паведамленняў:
     \item ACK --- пакет, які пацвярджае атрыманне пакетаў update, query, reply. ACK-пакеты адпраўляюцца unicast рассылкай і ўтрымліваюць у сабе acknowledgment number. Фактычна гэта hello-пакеты, якія не перадаюць даных. Выкарыстоўваецца негарантаваная дастаўка.
 \end{enumerate}
 
-\subsubsection{Адносіны суседства і пакеты Hello}
+\subsubsection{Адносіны суседства і пакеты Hello.}
 
 Для ўстанаўлення адносін суседства EIGRP выкарыстоўвае пакеты hello:
 \begin{enumerate}
