--- a/part2.tex
+++ b/part2.tex
@@ -72,6 +72,42 @@ EIGRP выкарыстоўвае 5 тыпаў паведамленняў:
 
 Інфармацыя аб усіх выяўленых суседзях змяшчаецца ў табліцы суседзяў.
 Табліца суседзяў (neighbor table) --- спіс непасрэдна далучаных маршрутызатараў (на якіх працуе EIGRP) з якімі маршрутызатар устанавіў адносіны суседства. Адна табліца суседзяў існуе для кожнага PDM (Protocol-dependent module).
+
+\subsubsection{Update пакеты.}
+
+Пасля таго як маршрутызатары сталі суседзямі, яны пачынаюць абменьвацца абнаўленнямі (Update). Гэтыя пакеты могуць быць адпраўленыя канкрэтнаму маршрутызатара (unicast рассылка) або групе маршрутызатараў (multicast рассылка).
+
+Працэс абмену абнаўленнямі:
+\begin{enumerate}
+    \item першапачаткова адпраўляюцца поўныя абнаўлення, у якія ўключаны ўсе маршруты, за выключэннем тых, якія трапляюць пад правіла split horizon;
+    \item пасля таго як абмен маршрутамі завяршыўся, абнаўленні не адпраўляюцца;
+    \item у далейшым абнаўлення адпраўляюцца, калі змяніўся адзін або больш маршрутаў;
+    \item калі адносіны суседства разрываюцца, а затым аднаўляюцца, то адпраўляюцца поўныя абнаўлення.
+\end{enumerate}
+
+Віды EIGRP абнаўленняў:
+\begin{enumerate}
+    \item неперыядычныя (Nonperiodic) --- абнаўленні адпраўляюцца нe праз рэгулярныя інтэрвалы часу, а пры змене тапалогіі або метрыкі;
+    \item частковыя (Partial) --- у абнаўленнях перадаецца не ўся інфармацыя з табліцы маршрутызацыі, а толькі змены;
+    \item абмежаваныя (Bounded) - абнаўленні адпраўляюцца толькі задзейнічаным маршрутызатарам.
+\end{enumerate}
+
+\subsubsection{Табліца тапалогіі}
+
+Табліца тапалогіі (topology table) --- спіс маршрутаў, вывучаных ад кожнага суседа.
+
+Калі сусед паведамляе лакальнаму маршрутызатару аб маршруце, то сусед павінен выкарыстоўваць гэты маршрут для перадачы трафіку. Іншымі словамі, маршрутызатар адпраўляе суседзям толькі тыя маршруты, якія сам выкарыстоўвае (гэта значыць, яны знаходзяцца ў табліцы маршрутызацыі).
+Гэтае правіла абавязкова павінна выконвацца для ўсіх дыстанцыйна-вектарных пратаколаў.
+
+У табліцы тапалогіі таксама захоўваецца метрыка, якую паведамляе кожны сусед для кожнага маршруту (AD) і метрыка, якую лакальны маршрутызатар будзе выкарыстоўваць для таго каб дасягнуць маршруту праз суседа.
+
+Табліца тапалогіі абнаўляецца, калі змяняецца непасрэдна далучаны маршрут або інтэрфейс або калі суседні маршрутызатар паведамляе пра змяненне маршруту.
+Запісы ў табліцы тапалогіі могуць знаходзіцца ў двух станах: active і passive.
+Маршрут знаходзіцца ў стане passive, калі маршрутызатар не выконвае пералік маршруту, і ў стане active --- калі выконваецца пералік маршруту.
+
+Пералік выконваецца, калі для сеткі прызначэння няма feasible successor. Маршрутызатар ініцыюе пералік адпраўляючы запыт (адпраўляе query packet) кожнаму суседняму маршрутызатару. Калі ў суседа ёсць маршрут да сеткі прызначэння, то ён адказвае (адпраўляе reply packet), калі маршруту няма --- сусед адпраўляе запыт сваіх суседзяў.
+
+У табліцы тапалогіі можа захоўваецца 6 маршрутаў да сеткі прызначэння (асноўны і запасныя).
 %Дадзены пратакол адносіцца да тыпу distance-vector, аднак, у адрозненне ад
 %RIP, ён выкарыстоўвае ў якасці асновы сваёй работы алгарытм дыфузійных вылічэнняў.
 %
