--- a/part2.tex
+++ b/part2.tex
@@ -108,34 +108,11 @@ EIGRP выкарыстоўвае 5 тыпаў паведамленняў:
 Пералік выконваецца, калі для сеткі прызначэння няма feasible successor. Маршрутызатар ініцыюе пералік адпраўляючы запыт (адпраўляе query packet) кожнаму суседняму маршрутызатару. Калі ў суседа ёсць маршрут да сеткі прызначэння, то ён адказвае (адпраўляе reply packet), калі маршруту няма --- сусед адпраўляе запыт сваіх суседзяў.
 
 У табліцы тапалогіі можа захоўваецца 6 маршрутаў да сеткі прызначэння (асноўны і запасныя).
-%Дадзены пратакол адносіцца да тыпу distance-vector, аднак, у адрозненне ад
-%RIP, ён выкарыстоўвае ў якасці асновы сваёй работы алгарытм дыфузійных вылічэнняў.
-%
-%Маршрутызатары, якія ўдзельнічаюць у працы EIGRP абменьваюцца інфармацыяй аб прэфіксах, якія знаходзяцца ў табліцы маршрутызацыі кожнага з іх.
-%
-%Інфармацыя аб прэфіксах змяшчае:
-%\begin{enumerate}
-%    \item IP-адрас сеткі;
-%    \item маску падсеткі;
-%    \item паласу прапускання сегмента гэтай сеткі;
-%    \item затрымку на інтэрфейсе маршрутызатара, які ўяўляе дадзены сегмент сеткі;
-%    \item нагрузку, якая дзейнічае на інтэрфейсе, які ўяўляе дадзены сегмент сеткі;
-%    \item надзейнасць, разлічаная на інтэрфейсе дадзенага сегмента сеткі;
-%    \item памер MTU.
-%\end{enumerate}
 
-У якасці паласы прапускання сегмента сеткі перадаецца мінімальная
-паласа прапускання па сеткаваму шляху, праз які праходзіць маршрут да зададзенай сеткі. У якасці затрымкі перадаецца сумарнаe значэнне затрымкі
-для перадачы пакета па ўсіх каналах на маршруце да зададзенай сеткі. У якасці нагрузкі перадаецца максімальнае значэнне параметру txload па ўсіх каналах на маршруце да зададзенай сеткі, які аўтаматычна разлічваецца
-на кожным інтэрфейсе маршрутызатара. У якасці надзейнасці перадаецца мінімальнае
-значэнне адносін колькасці дакладна прынятых пакетаў да агульнай колькасці прынятых пакетаў па ўсіх каналах на маршруце да зададзенай сеткі. Значэнні
-нагрузкі і надзейнасці вылічаюцца кожным маршрутызатарам паасобку
-на інтэрфейсе, падключаным да канала, які з'яўляецца часткай маршруту
-да зададзенай сеткі.
+\subsubsection{Разлік метрыкі EIGRP.}
 
-На аснове атрыманай інфармацыі аб прэфіксе маршрутызатар вылічвае метрыку.
 У стандраце, які апісвае работу EIGRP, вызначаны 2 варыянты метрыкі:
-стандартная і пашыраная. Стандартная метрыка разлічваецца маршрутызатарам
+стандартная і пашыраная. Стандартная метрыка, якая будзе выкарыстоўвацца ў дадзеным праекце, разлічваецца маршрутызатарам
 па формуле:
 \begin{equation}
     CM = \left(K_1 \cdot BW_s + K_2 \cdot \frac{BW_s}{256 -Lo_\text{max}} + K_3 \cdot D_s\right) \cdot \left(\frac{K_5}{K4 + R_\text{min}}\right)
