--- a/part3.tex
+++ b/part3.tex
@@ -125,3 +125,16 @@ Successor-а пры яго наяўнасці.
                             language=bash]{R3/before/topology.txt}
 
 \subsection{Работа алгарытму пры перадачы трафіка}
+
+У дадзеным раздзеле разгледзім работу алгарытму на маршрутызатары R1 пры
+перадачы трафіка ў сетку.
+
+Для імітацыі перадачы інфармацыі ў сетцы выкарыстоўваўся метад flood ping,
+які дазваляе бесперапынку пасылаць вялікія ICMP пакеты ў сетку.
+
+У лістынгу \ref{lst: flood ping} прадстаўлена каманда, якая пачынае 
+бесперапынна перадаваць ICMP пакеты памерам 56500 байт у сетку 10.10.33.0/24.
+
+\lstinputlisting[caption={Каманда для імітацыі перадачы трафіка ў сетку},%
+                            label={lst: flood ping},%
+                            language=bash]{flood_ping.txt}
