--- a/part3.tex
+++ b/part3.tex
@@ -138,3 +138,14 @@ Successor-а пры яго наяўнасці.
 \lstinputlisting[caption={Каманда для імітацыі перадачы трафіка ў сетку},%
                             label={lst: flood ping},%
                             language=bash]{flood_ping.txt}
+
+Як бачна з лістынгу \ref{lst: recalculation} праграма маніторынгу і пераразліку суправаджаецца пастаянным
+запісам логаў: пры знаходжанні інтэрфейса, на якім новае значэнне нагрузкі перавышае ўстаноўлены парог,
+у логі запісваецца, на якім маршрутызатары адбываецца пераразлік метрыкі, калі значэнне нагрузкі менш за парог,
+то ў лог запісваецца старое і новае значэнне нагрузкі на дадзеным інтэрфейсе.
+
+У лістынгу \ref{lst: program output} прадстаўлены лог праграмы да першага пераліку метрыкі для маршрутызатара R1.
+
+\lstinputlisting[caption={Лог праграмы алгарытму для маршрутызатара R1},%
+                            label={lst: program output},%
+                            language=bash]{program_output.txt}
