--- a/part3.tex
+++ b/part3.tex
@@ -149,3 +149,40 @@ Successor-а пры яго наяўнасці.
 \lstinputlisting[caption={Лог праграмы алгарытму для маршрутызатара R1},%
                             label={lst: program output},%
                             language=bash]{program_output.txt}
+
+\subsection{Параўнанне EIGRP параметраў на маршрутызатарах пасля пераразліку метрыкі}
+
+У дадзены раздзеле прааналізіруем змяненні EIGRP параметраў на маршрутызатарах пасля таго як
+на маршрутызатары R1 новае значэнне нагрузкі перавысіла дапушчальны парог і кантролер падаў
+каманду на пераразлік метрыкі і перабудову тапалогіі сеткі.
+
+\subsubsection{Маршрутызатар R1.}
+
+Так як сігнал на пераразлік метрыкі быў пададзены на маршрутызатара R1, то на дадзеным
+маршрутызатары будуць найбольш заўважныя змяненні ў тапалогіі сеткі.
+
+У лістынгу \ref{lst: R1 after/routes} прадстаўлена табліца EIGRP маршрутаў на маршрутызатары R1.
+
+\lstinputlisting[caption={Табліца EIGRP маршрутаў на маршрутызатары R1},%
+                            label={lst: R1 after/routes},%
+                            language=bash]{R1/after/routes.txt}
+
+Можам заўважыць, што табліца EIGRP маршрутаў змянілася, пры гэтым
+для сеткі 10.10.\-11.0/24 стаў даступны толькі 1 маршрут (via 192.168.254.2), а для сеткі 10.10.33.0/24 метрыка маршруту змянілася з 2698295 на 2701384.
+Дадзеныя змяненні адбыліся, так як маршрут праз маршрутызатар з адрасам
+10.10.22.22 выкарыстоўвае інтэрфейс GigabitEthernet3 на якім падчас пераразліку
+метрыкі параметр нагрузкі павялічыўся адносна папярэдняга значэння (глядзі лістынг \ref{lst: program output}).
+
+У лістынгу \ref{lst: R1 after/topology} прадстаўлена EIGRP тапалогія
+на маршрутызатары R1.
+
+\lstinputlisting[caption={EIGRP тапалогія на маршрутызатары R1},%
+                            label={lst: R1 after/topology},%
+                            language=bash]{R1/after/topology.txt}
+
+З лістынга \ref{lst: R1 after/topology} бачна, што маршрут для сеткі
+10.\-10.\-11.\-0/24 усё яшчэ даступны праз 2 маршрутызатары,
+аднак існуе толькі 1 Successor, так як метрыкі маршрутаў адрозніваюцца
+(2595895 і 2598984 адпаведна). Так жа адзначым, што для сеткі
+10.\-10.\-33.\-0/24 метрыка змянілася толькі для 1 маршрута, што
+мы і бачылі ў табліцы EIGRP маршрутаў (лістынг \ref{lst: R1 after/routes}).
